--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Envelope Screen -->
     <div id="envelope-container">
-      <img src="./Envelope.png" alt="Envelope" id="envelope" />
+      <img src="Envelope.png" alt="Envelope" id="envelope" />
       <p>♡ Letter for Ashley♡</p>
       <p>by Fritz :)</p>
     </div>
