--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Around 11-12AM. See you love!
+          <strong>Valentine Date:</strong> Around 11-12AM. See you!
         </p>
       </div>
     </div>
